--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 1.3.1 to 1.3.2
 ----------------------------------------------------------------------
+- Changed the way v2 traps are handled, we now do not take the first two 
+  varbinds as parameters.  This is in accordance with RFC2089.  This is in 
+  rev 4883 of SVN.  This should address bug 733.
 - Add proxy-host support back into snmp-config.xml
 - Notificatiaons can now reference %tticketid% to retrieve the ticket
   number from the event.  Auto resolving events now have all configured
