Disabled DHCP until it is fixed.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 1.3.2 to 1.3.3
 ----------------------------------------------------------------------
+- Turned off DHCP monitoring until it gets fixed. 
 - Fixed Bug 1403 which was causing the issnmprimary field to be
   set to "N" for interfaces with IP addresses and no SNMP.
 - Changed a large number of files to make defaults more reasonable.
