--- a/opennms-daemon/src/main/filtered/bin/install
+++ b/opennms-daemon/src/main/filtered/bin/install
@@ -1,4 +1,4 @@
 #!/bin/sh -
 
 exec @install.bin.dir@/runjava -r -- \
-     -Xmx256m -jar -Dopennms.home="@install.dir@" @install.dir@/lib/opennms_install.jar "$@"
+     -Xmx256m -Dopennms.home="@install.dir@" -jar @install.dir@/lib/opennms_install.jar "$@"
