--- a/docs/modules/reference/nav.adoc
+++ b/docs/modules/reference/nav.adoc
@@ -61,6 +61,7 @@
 ** xref:service-assurance/monitors/LdapsMonitor.adoc[]
 ** xref:service-assurance/monitors/MailTransportMonitor.adoc[]
 ** xref:service-assurance/monitors/MemcachedMonitor.adoc[]
+** xref:service-assurance/monitors/MinaSshMonitor.adoc[]
 ** xref:service-assurance/monitors/NetScalerGroupHealthMonitor.adoc[]
 ** xref:service-assurance/monitors/NrpeMonitor.adoc[]
 ** xref:service-assurance/monitors/NtpMonitor.adoc[]
