--- a/docs/modules/deployment/pages/time-series-storage/newts/configuration.adoc
+++ b/docs/modules/deployment/pages/time-series-storage/newts/configuration.adoc
@@ -13,6 +13,10 @@ Use the following properties, found in `$\{OPENNMS_HOME}/etc/opennms.properties`
 |===
 | Name  | Description   | Default
 
+| org.opennms.newts.config.datacenter
+| Name of the local Cassandra datacenter.
+| datacenter1
+
 | org.opennms.newts.config.keyspace
 | Name of the keyspace to use.
 | newts
@@ -38,12 +42,8 @@ If including multiple node references, separate each with a single comma.
 | Enable or disable SSL when connecting to Cassandra.
 | false
 
-| org.opennms.newts.config.core-connections-per-host
-| Core number of connections per host.
-| _Driver default_
-
-| org.opennms.newts.config.max-connections-per-host
-| Maximum number of connections per host.
+| org.opennms.newts.config.connections-per-host
+| Number of connections per host.
 | _Driver default_
 
 | org.opennms.newts.config.max-requests-per-connection
@@ -59,6 +59,11 @@ See http://docs.datastax.com/en/cassandra/2.1/cassandra/dml/dml_config_consisten
 | Consistency level for write operations.
 See http://docs.datastax.com/en/cassandra/2.1/cassandra/dml/dml_config_consistency_c.html[Configuring Data Consistency] in the Cassandra documentation for a list of available options.
 | ANY
+
+| org.opennms.newts.config.driver_settings_file
+| Cassandra driver settings file - overwrites all other driver related settings
+See https://docs.datastax.com/en/developer/java-driver/4.14/manual/core/configuration/reference/[Reference configuration] for details.
+| _None_
 
 | org.opennms.newts.config.max_batch_size
 | Maximum number of records to insert in a single transaction.
