--- a/docs/modules/operation/pages/deep-dive/service-assurance/configuration.adoc
+++ b/docs/modules/operation/pages/deep-dive/service-assurance/configuration.adoc
@@ -58,3 +58,31 @@ During evaluation of an expression, the following scopes are available:
 * Node metadata
 * Interface metadata
 * Service metadata
+
+[[ga-pollerd-configuration-async]]
+== Asynchronous engine
+
+By default, the number of polls active at any given time is limited by the number of threads that are allocated to the daemon.
+Each thread is responsible for one poll, and will block until the poll is completed.
+This is true, even when the polling is done by a Minion at a remote location.
+In this case, the thread will block for the duration of the RPC.
+
+In scenarios where there are hundreds of different locations, and hundreds of nodes at each of these, it can be desirable to reduce the number of threads required on the core.
+Each thread allocates a fixed amount of system memory, and too many threads active at a given time can extraneous load on the system due to context switching.
+
+For these reasons, we have developed a new asynchronous mode for the poller.
+When enabled, threads are released while the polls are active, allowing Minions to process more polls than there are threads.
+
+To enable the feature, set the following attributes in the top level element of `etc/poller-configuration.xml`:
+[source, xml]
+----
+<poller-configuration threads="30"
+                      asyncPollingEngineEnabled="true" <1>
+                      maxConcurrentAsyncPolls="200" <2>
+----
+
+<1> Enable the asynchronous engine.
+<2> Used to limit the number of polls active, since each of these still consume some memory resources.
+
+In this mode, threads are only used to trigger the execution of the poll, so the number can be typically reduced.
+The actual number of polls active, or in-flight, can be observed via the `NumPollsInFlight` metrics associated with the daemon's MBeans.
