--- a/docs/modules/releasenotes/pages/whatsnew.adoc
+++ b/docs/modules/releasenotes/pages/whatsnew.adoc
@@ -9,10 +9,57 @@
 
 == New features and improvements
 
-=== Nothing
+=== Newts: DataStax driver for Cassandra upgrade
 
+The DataStax driver for Cassandra was updated from version 3.x to 4.x.
+This allows us to introduce the following functionality:
 
-== Breaking Changes
+. Set additional Cassandra driver settings using system properties (for example, you can set `datastax-java-driver.basic.request.timeout="30 seconds"` to configure the connection timeout).
+See https://docs.datastax.com/en/developer/java-driver/4.0/manual/core/configuration/[Configuration] in the official DataStax documentation for details.
+
+. Configure all driver settings using an external file.
+To do so, set the following system properties in `newts-on-cassandra.conf`:
++
+[source, properties]
+----
+org.opennms.newts.config.keyspace=newts
+org.opennms.newts.config.driver_settings_file=/opt/opennms/etc/newts-on-cassandra.conf
+----
+
+** For example, a minimal version of the file would resemble the following snippet:
++
+[source, ]
+----
+datastax-java-driver {
+  basic.contact-points = [ "127.0.0.1:9042" ]
+  session-name = "default"
+  session-keyspace = "newnewts"
+  basic.load-balancing-policy {
+    local-datacenter = datacenter1
+  }
+}
+----
+
+** See https://github.com/datastax/java-driver/blob/4.0.1/core/src/main/resources/reference.conf[reference.conf] in the DataStax GitHub repository for a complete example.
+
+== Breaking changes
+
+=== Newts: DataStax driver for Cassandra upgrade
+
+The DataStax driver for Cassandra was updated from version 3.x to 4.x.
+This introduces the following breaking changes:
+
+. `org.opennms.newts.config.datacenter` is now required.
+Set this to the value of your local datacenter for the best performance.
+. `org.opennms.newts.config.core-connections-per-host` and `org.opennms.newts.config.max-connections-per-host` have been removed.
+Use `org.opennms.newts.config.connections-per-host` to configure the number of connections per host.
+
+=== JMX MBean name changes
+
+Because of an upgrade of the Dropwizard Metrics library, some JMX MBeans object names have changed.
+The built-in data collection configurations have been updated to use the new object names, and will continue to work as-is.
+If you have other collections, or you are otherwise relying on MBeans, you may need to adjust the object references there.
+For example, org.opennms.newts:name=search.update,type=timers` has become `org.opennms.newts:name=search.update,type=timers`, and the `type` attribute has been added to the object.
 
 === Everything
 
