--- a/docs/modules/deployment/pages/core/centos-rhel/initialize-core.adoc
+++ b/docs/modules/deployment/pages/core/centos-rhel/initialize-core.adoc
@@ -1,28 +1,41 @@
 .Configure PostgreSQL database access
+
+You can store your PostgreSQL credentials in the secure credentials vault.
+To do this, use the `scvcli` command line utility to add the credentials, and reference these credentials in `opennms-datasources.xml`:
+
+. Create encrypted credentials for the PostgreSQL database connections:
++
 [source, console]
 ----
-sudo -u opennms vi /opt/opennms/etc/opennms-datasources.xml
+sudo -u opennms ${OPENNMS_HOME}/bin/scvcli set postgres opennms password <1>
+sudo -u opennms ${OPENNMS_HOME}/bin/scvcli set postgres-admin postgres password
 ----
+<1> Replace both `password` instances with the actual passwords for your `opennms` and `postgres` database accounts.
 
-.Set credentials to access the PostgreSQL database
+. Edit `opennms-datasources.xml` with `vi`:
++
+[source, console]
+sudo -u opennms vi /opt/opennms/etc/opennms-datasources.xml
+
+. Set encrypted credentials to access the PostgreSQL database:
++
 [source, xml]
 ----
 <jdbc-data-source name="opennms"
-                    database-name="opennms"<1>
+                    database-name="opennms" <1>
                     class-name="org.postgresql.Driver"
                     url="jdbc:postgresql://localhost:5432/opennms"
-                    user-name="** YOUR-OPENNMS-USERNAME **"<2>
-                    password="** YOUR-OPENNMS-PASSWORD **" /><3>
+                    user-name="${scv:postgres:username}" <2>
+                    password="${scv:postgres:password}" /> <3>
 
 <jdbc-data-source name="opennms-admin"
                     database-name="template1"
                     class-name="org.postgresql.Driver"
                     url="jdbc:postgresql://localhost:5432/template1"
-                    user-name="postgres"<4>
-                    password="** YOUR-POSTGRES-PASSWORD **" /><5>
+                    user-name="${scv:postgres-admin:username}" <4>
+                    password="${scv:postgres-admin:password}" /> <5>
 ----
-
-<1> Set the database name {page-component-title} should use.
+<1> Set the database name that {page-component-title} should use.
 <2> Set the user name to access the opennms database table.
 <3> Set the password to access the opennms database table.
 <4> Set the postgres user for administrative access to PostgreSQL.
@@ -43,10 +56,10 @@ sudo /opt/opennms/bin/install -dis
 [[initialize-core-cap]]
 ._Assign CAP_NET_RAW capabilities_
 {page-component-title} runs as a non-root user, which requires having a Linux kernel greater than 3.10.
-If you run on an older kernel, and are unable to upgrade your OS, you need to assign CAP_NET_RAW capabilities:
+If you run on an older kernel and you cannot upgrade your OS, you need to assign `CAP_NET_RAW` capabilities:
 
-Run `systemctl edit --full opennms.service` and add the following line to the `[Service]` section:
-
+. Run `systemctl edit opennms.service` and add the following code to the `[Service]` section:
++
 [source, properties]
 ----
 AmbientCapabilities=CAP_NET_RAW CAP_NET_BIND_SERVICE
