--- a/docs/modules/deployment/pages/core/getting-started.adoc
+++ b/docs/modules/deployment/pages/core/getting-started.adoc
@@ -30,9 +30,9 @@ endif::[]
 * Internet access to download the installation packages.
 * A working DNS server, and a localhost and server name that resolve properly.
 * A system user with administrative permissions (`sudo`) to perform installation.
-* A SELinux policy that permits binding to the ICMP service (if you are using an operating system that includes SELinux).
+* If in use: A SELinux policy that permits binding to the ICMP service.
 +
-Note that failure to include the appropriate SELinux policy may generate an ICMP permission error when starting OpenNMS (see <<selinux-icmp, SELinux and ICMP permissions>>).
+Note that failure to include the appropriate SELinux policy may generate an ICMP permission error when starting {page-component-title} (see xref:reference:configuration/selinux.adoc[]).
 ifeval::["{page-component-title}" == "Horizon"]
 * To run services in https://docs.docker.com/[Docker], you need https://docs.docker.com/compose/install[Docker Compose] for the service stacks from our examples.
 
@@ -41,83 +41,6 @@ See the https://wiki.debian.org/sudo/[Debian Wiki] for more information.
 endif::[]
 
 include::../time-sync.adoc[]
-
-[[selinux-icmp]]
-=== SELinux and ICMP permissions
-
-If you have SELinux enabled on your {page-component-title} server, there must be a policy configured to allow {page-component-title} to bind to the ICMP service.
-
-NOTE: The steps in this section apply specifically to CentOS 8.
-
-To verify that you have SELinux running and enabled, use the `sestatus` console command.
-If it is enabled, you should see the following:
-
-[source, console]
-----
-SELinux status:                 enabled
-SELinuxfs mount:                /sys/fs/selinux
-SELinux root directory:         /etc/selinux
-Loaded policy name:             targeted
-Current mode:                   enforcing
-Mode from config file:          enforcing
-Policy MLS status:              enabled
-Policy deny_unknown status:     allowed
-Memory protection checking:     actual (secure)
-Max kernel policy version:      33
-----
-
-Use `audit2allow -a` to check if {page-component-title} violates SELinux policies.
-
-NOTE: If the `audit2allow` command is missing, run `dnf install policycoreutils-devel` to install the package.
-
-Look for entries that prevent the binding of ICMP sockets:
-
-[source, console]
-----
-#============= unconfined_service_t ==============
-allow unconfined_service_t node_t:icmp_socket node_bind;
-
-============= unconfined_service_t ==============
-allow unconfined_service_t port_t:icmp_socket name_bind;
-----
-
-Create a type enforcement file (for example, `JniPing.te`):
-
-[source, console]
-----
-module JniPing 1.0;
-
-require {
-        type unconfined_service_t;
-        type node_t;
-        type port_t;
-        class icmp_socket { name_bind node_bind };
-}
-
-#============= unconfined_service_t ==============
-allow unconfined_service_t node_t:icmp_socket node_bind;
-allow unconfined_service_t port_t:icmp_socket name_bind;
-----
-
-Create a SElinux module and compile it:
-
-[source, console]
-----
-checkmodule -M -m -o JniPing.mod JniPing.te
-semodule_package -o JniPing.pp -m JniPing.mod
-----
-
-Install the SELinux package and enforce it:
-
-[source, console]
-----
-semodule -i JniPing.pp
-getenforce
-----
-
-You can verify the package with the following command: `semodule --list-modules | grep JniPing`.
-
-Note that this command is based on the `audit2allow` command on a CentOS 8 system.
 
 [[setup-postgresql]]
 == Set up PostgreSQL
@@ -233,42 +156,11 @@ include::docker/initialize.adoc[]
 endif::[]
 ====
 
-== Encrypt database credentials
-
-It is possible to store the PostgreSQL credentials in the secure credentials vault.
-To achieve this, use the `scvcli` command line utility to add the credentials, and reference these credentials in `opennms-datasources.xml`.
-
-.Create encrypted credentials for PostgreSQL database connections:
-[source, console]
-----
-sudo -u opennms ${OPENNMS_HOME}/bin/scvcli set postgres opennms password <1>
-sudo -u opennms ${OPENNMS_HOME}/bin/scvcli set postgres-admin postgres password
-----
-<1> Replace both `password` instances with the actual passwords for your `opennms` and `postgres` database accounts.
-
-.Reference encrypted credentials stored in the secure credentials vault:
-[source, xml]
-----
-<jdbc-data-source name="opennms"
-                    database-name="opennms"
-                    class-name="org.postgresql.Driver"
-                    url="jdbc:postgresql://localhost:5432/opennms"
-                    user-name="${scv:postgres:username}"
-                    password="${scv:postgres:password}" />
-
-<jdbc-data-source name="opennms-admin"
-                    database-name="template1"
-                    class-name="org.postgresql.Driver"
-                    url="jdbc:postgresql://localhost:5432/template1"
-                    user-name="${scv:postgres-admin:username}"
-                    password="${scv:postgres-admin:password}" />
-----
-
 [[ga-data-choices]]
-== First-time login and data choices
+== First-time sign in and data choices
 
 After you start the {page-component-title} core services, you can access the web application at `\http://core-instance-ip:8980/opennms`.
-The default user login is `admin` with the password `admin`.
+The default user account is `admin` with the password `admin`.
 
 IMPORTANT: After you log in for the first time, immediately change the `admin` account's password to a secure one.
 
@@ -293,56 +185,18 @@ If all users have individual accounts, you can see who is completing tasks like 
 
 For information on how to create a personalized user account, see xref:operation:quick-start/users.adoc#create-user[Create a new user] in the Quick Start guide.
 
-[[receive-snmp-traps]]
-== Receive SNMP traps/informs
-
-{page-component-title} core lets you receive and process SNMP traps and informs out of the box.
-{page-component-title} services run as an unprivileged user and can't bind on port numbers below `1024` without escalated privileges.
-For this reason, the default port for the SNMP trap/inform listener is set to port number `10162/udp` instead of the IANA registered port number `162/udp`.
-The following example shows how to configure the local firewall daemon to forward port `162/udp` to `10162/udp`.
-
-NOTE: If you need the SNMP trap listener on port `162/udp` directly, see the "Binding to privileged ports" steps in <<core/getting-started.adoc#set-up-core-instance, Set up the core instance>>.
-
-[{tabs}]
-====
-CentOS/RHEL 7/8/9::
-+
---
-include::centos-rhel/firewall-core.adoc[]
---
-ifeval::["{page-component-title}" == "Horizon"]
-
-Debian/Ubuntu::
-+
---
-include::debian-ubuntu/firewall-core.adoc[]
---
-endif::[]
-====
-
-You can verify your firewall and port forwarding configuration by sending an SNMP trap from a remote system to your {page-component-title} core instance:
-
-[source, console]
-snmptrap -v 2c -c public opennms-core-host '' 1.3.6.1.4.1.2021.991.17 .1.3.6.1.2.1.1.6.0 s "Milky Way" <1><2>
-
-<1> By default, {page-component-title} uses the `public` community string.
-If you changed the community string in {page-component-title}, use that name here.
-<2> Replace `opennms-core-host` with the IP or FQDN of your {page-component-title} core instance.
-
-On RHEL and CentOS, the `snmptrap` command line tool is part of the `net-snmp-utils`.
-If you run on Debian or Ubuntu, the tool is part of the `snmp-utils` package.
-
-Your configuration works as expected when you see an SNMP trap event in the web UI.
-
-. Log in to the web UI.
-. Click menu:Status[Events > All Events].
-. Verify that you received a `uei.opennms.org/generic/traps/EnterpriseDefault` event from your test host.
-
 == First monitored node
 
 The default configuration will discover a single node with an interface `127.0.0.1` and detect services exposed on the loopback interface, including the OpenNMS-JVM service.
 Nodes with this service have JMX-based data collection performed on Java JVM statistics such as heap memory and open file handles.
 
+== Related topics
+
+* xref:reference:configuration/selinux.adoc[]
+* xref:reference:configuration/receive-snmp-traps.adoc[]
+* xref:reference:configuration/install-jdbc-driver.adoc[]
+
 == Next steps
 
 See the xref:operation:quick-start/introduction.adoc[Quick Start guide] for more information on setting up and configuring your {page-component-title} instance.
+
