--- a/docs/modules/reference/nav.adoc
+++ b/docs/modules/reference/nav.adoc
@@ -15,6 +15,11 @@
 ** xref:configuration/tuning-activemq.adoc[]
 ** xref:configuration/tuning-kafka.adoc[]
 ** xref:configuration/ttl-rpc.adoc[]
+** xref:configuration/selinux.adoc[]
+** xref:configuration/receive-snmp-traps.adoc[]
+** xref:configuration/install-jdbc-driver.adoc[]
+
+
 
 * xref:performance-data-collection/introduction.adoc[]
 ** xref:performance-data-collection/collectors/http.adoc[]
