--- a/docs/modules/deployment/nav.adoc
+++ b/docs/modules/deployment/nav.adoc
@@ -4,6 +4,7 @@
 ** xref:core/system-requirements.adoc[]
 ** xref:core/getting-started.adoc[]
 ** xref:core/setup-message-broker.adoc[]
+** xref:core/admin-password-reset.adoc[]
 * xref:minion/introduction.adoc[]
 ** xref:minion/system-requirements.adoc[]
 ** xref:minion/install.adoc[]
