--- a/docs/modules/operation/pages/deep-dive/alarms/alarm-related-events.adoc
+++ b/docs/modules/operation/pages/deep-dive/alarms/alarm-related-events.adoc
@@ -4,4 +4,4 @@
 It uses events with the same `node ID`, `interface`, `service`, and `ifIndex` to do this.
 
 .Alarm Related Events page
-image::alarms/alarm_related-events.png["Alarm Related Events page displaying related events", 850]
+image::alarms/alarm_related-events.png["Alarm Related Events page displaying related events.", 850]
