--- a/docs/modules/operation/nav.adoc
+++ b/docs/modules/operation/nav.adoc
@@ -103,6 +103,7 @@
 *** xref:deep-dive/alarms/alarmd.adoc[]
 *** xref:deep-dive/alarms/configuring-alarms.adoc[]
 *** xref:deep-dive/alarms/alarm-notes.adoc[]
+*** xref:deep-dive/alarms/alarm-related-events.adoc[]
 *** xref:deep-dive/alarms/alarm-sound-flash.adoc[]
 *** xref:deep-dive/alarms/history.adoc[]
 *** xref:deep-dive/alarms/alarm-advanced-search.adoc[]
