NMS-12808: Document the function hiding Meta-Data password values

--- a/docs/modules/operation/pages/deep-dive/meta-data.adoc
+++ b/docs/modules/operation/pages/deep-dive/meta-data.adoc
@@ -145,6 +145,12 @@ image::metadata/metadata_add.png["{page-component-title} UI displaying the Meta-
 . In the *Scope* list, select either *Node* or *Interface*.
 . Specify the key and a value, and click *Save*.
 
+[[ga-metadata-passwords]]
+== Hidden passwords in metadata
+
+Metadata values for key names that include a substring match of `password`, `Password`, `secret`, or `Secret` will be hidden by default for non-administrator users.
+Users with `ROLE_ADMIN` permissions can read these values in the web UI.
+
 [[ga-meta-data-dsl]]
 == The metadata DSL
 
