--- a/docs/modules/operation/pages/deep-dive/geographical-map/searching.adoc
+++ b/docs/modules/operation/pages/deep-dive/geographical-map/searching.adoc
@@ -12,7 +12,7 @@ This includes the previous supported fields listed.
 |====
 | Field
 | Description
-| Allow substring
+| Allow Substring
 
 | nodeId
 | The ID of the node
