--- a/docs/modules/operation/pages/deep-dive/geographical-map/searching.adoc
+++ b/docs/modules/operation/pages/deep-dive/geographical-map/searching.adoc
@@ -54,6 +54,6 @@ This endpoint can find nodes using any of the fields offered by the API, includi
 
 NOTE: All searches are case-insensitive, and the search currently allows node selection only using the listed search fields.
 
-To search for en exact or a partial text in one of the fields, enter the desired text.
+If you want to search for exact or partial text in one of the search fields, simply type the desired text in the appropriate field.
 
 
