--- a/docs/modules/troubleshooting/pages/other-issues.adoc
+++ b/docs/modules/troubleshooting/pages/other-issues.adoc
@@ -73,7 +73,7 @@ If you run `xmllint` again, the file should validate properly:
 
 {page-component-title} should now start properly.
 
-You can run `xmllint` on all files in `$\{OPENNMS_HOME}/etc/events` with the following command:
+You can run `xmllint` on all files in `$\{OPENNMS_HOME}/etc/events` using this command:
 
 [source, shell]
 for x in ${OPENNMS_HOME}/etc/events/*;do xmllint --schema ${OPENNMS_HOME}/share/xsds/eventconf.xsd $x --noout;done
