--- a/docs/modules/deployment/pages/core/admin-password-reset.adoc
+++ b/docs/modules/deployment/pages/core/admin-password-reset.adoc
@@ -1,18 +1,16 @@
 
 [[reset-admin-password]]
-= Reset the Web UI admin password
+= Reset the Web UI Admin Password
 
-This section explains how to set the Web UI admin password using the {page-component-title} installation script.
+This section explains how to set the web UI admin password using the {page-component-title} installation script.
 
-After a {page-component-title} installation, the Web UI admin user's password defaults to `admin`.
-This password can be altered after the initial login to the {page-component-title} Web UI.
-In the case of a forgotten password or deployment scenarios that require to set this password on installation you can use the {page-component-title} installation script to reset this password.
+After you install {page-component-title}, the web UI admin user's password is set to `admin` by default.
+You can change this password after the initial login to the {page-component-title} web UI.
+In the case of a forgotten password or deployment scenarios that require users to set this password on installation you can use the {page-component-title} installation script to reset this password.
 
-You need to add the option ` -R` (or `--reset-webui-password`) and providing the password to set as an argument.
+You need to add the option ` -R` (or `--reset-webui-password`) and provide the password to set as an argument.
 
-.Skip upgrade tasks and set the Web UI admin password to "foobar"
-[source, console]
-----
+.Skip upgrade tasks and set web UI admin password to "foobar"
+[source, shell]
 sudo /usr/share/opennms/bin/install -S -R foobar
-----
 
