--- a/docs/modules/operation/pages/deep-dive/geographical-map/searching.adoc
+++ b/docs/modules/operation/pages/deep-dive/geographical-map/searching.adoc
@@ -52,7 +52,7 @@ This endpoint can find nodes using any of the fields offered by the API, includi
 
 |====
 
-NOTE: All searches are case-insensitive, and the search currently allows node selection only using the listed search fields.
+NOTE: All searches are case-insensitive, and the search currently allows node selection using only the listed search fields.
 
 If you want to search for exact or partial text in one of the search fields, simply type the desired text in the appropriate field.
 
